# workflows

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
agents/: deepworker.md  researcher.md
agents/instructions/: researcher-algorithm-design.md
docs/adr/: 0001-gate-as-protocol-not-spectrum.md  0002-confidence-rules-by-semantic-domain.md  0003-metacognitive-checkpoint-placement.md  0004-redundancy-elimination-principle.md  0005-gate-enforcement-as-positive-statement.md  0006-generalize-existing-rules-over-adding-new-ones.md  0007-deepworker-hybrid-prompt-architecture.md  0008-deepworker-prompt-optimization-guardrail-placement.md  0009-plan-execution-irreversibility.md
docs/agent-deepworker-eval/: README.md  rubric.md  runbook.md
docs/agent-deepworker-eval/prompts/: 01-simple-task.md  02-tdd-task.md  03-explore-task.md  04-ambiguous-task.md  05-qa-failure-task.md  06-long-chain-task.md  07-complex-incomplete-task.md  08-qa-recovery-task.md  09-implicit-ambiguity-task.md
docs/agent-eval/: README.md  ablation-ambiguity-scan.md  rubric.md  runbook.md
docs/agent-eval/prompts/: 02-tdd-task.md  03-explore-task.md  04-ambiguous-task.md  05-qa-failure-task.md  06-long-chain-task.md  07-complex-incomplete-task.md  08-qa-recovery-task.md
docs/agents/: issue-tracker.md
docs/research/agent-deepworker/: deferred-issues.md
scripts/: __init__.py  e3_scorer.py
skills/algorithm-design/: SKILL.md
skills/book-grill/: SKILL.md  strategies.md
skills/book-grill/templates/: biography.md  fiction.md  nonfiction.md  technical.md
skills/prompt-engineering/: SKILL.md
skills/reading-grill/: SKILL.md
skills/source-critique/: SKILL.md
tests/: conftest.py  test_structure.py
(+4 files in other folders)
