[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflows"
version = "0.1.0"
description = "AI Agent Workflow — custom agents, skills, and commands"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6,<7",
    "pre-commit>=4,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"

[tool.ruff]
line-length = 100
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",      # missing docstring — not required for scripts
    "COM812",  # trailing comma — conflicts with ruff-format
    "C901",    # complexity — too strict for scripts
    "T20",     # print statements — acceptable in scripts
    "CPY",     # missing copyright notice — not enforced here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "INP001"]  # assert allowed in tests; no __init__.py required
"scripts/e3_scorer.py" = ["S404", "S603"]  # subprocess used intentionally in scorer script

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["workflows"]

[tool.mypy]
strict = true
python_version = "3.13"
enable_error_code = ["deprecated", "ignore-without-code"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*"]
